[package]
name = "kensatsu"
description = "Service to use a Sony PaSoRi as a Linux input device"
homepage = "https://github.com/mistydemeo/kensatsu"
repository = "https://github.com/mistydemeo/kensatsu"
version = "0.1.0"
authors = ["Misty De Meo <mistydemeo@gmail.com>"]
edition = "2018"
license = "GPL-2.0-only"

[dependencies]
pafe = "0.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
evdev-rs = "0.5.0"
