[package]
name = "kensatsu"
description = "Service to use a Sony PaSoRi as a Linux input device"
homepage = "https://github.com/mistydemeo/kensatsu"
repository = "https://github.com/mistydemeo/kensatsu"
version = "0.1.0"
authors = ["Misty De Meo <mistydemeo@gmail.com>"]
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
pafe = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
confy = { version = "0.5.0", features = ["yaml_conf"], default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
evdev-rs = "0.5.0"
